--- a/15 - Designo Multi Page Website/locations.html
+++ b/15 - Designo Multi Page Website/locations.html
@@ -42,10 +42,10 @@
     </div>
 </header>
 
-<section class="canada-location-section">
-    <div class="container location-container canada-location-container grid ">
+<section class="locations-page-section hero-section flow">
 
-        <div class="text-content background-very-light-peach flow">
+    <div class="container location-container canada-location-container grid ">
+        <div class="text-content background-very-light-peach flow flex flex-direction-column flex-justify-content-center">
             <h2 class="secondary-heading text-color-peach">Canada</h2>
             <div class="contact-box grid">
                 <div class="address">
@@ -55,8 +55,7 @@
                 </div>
 
                 <div class="contact-us-box">
-                    <p class="contact-us-heading font-size-100 text-color-dark-grey text-bold">Contact Us (Central
-                        Office)</p>
+                    <p class="contact-us-heading font-size-100 text-color-dark-grey text-bold">Contact</p>
                     <a class="footer-contact-link font-size-100 text-color-dark-grey text-decoration-none"
                        href="tel: +1 253-863-8967">P : +1
                         253-863-8967</a>
@@ -66,11 +65,53 @@
                 </div>
             </div>
         </div>
-
         <div class="image-container location-image-container"></div>
-
     </div>
 
+    <div class="container location-container australia-location-container grid ">
+        <div class="image-container location-image-container"></div>
+
+        <div class="text-content background-very-light-peach flow flex flex-direction-column flex-justify-content-center">
+            <h2 class="secondary-heading text-color-peach">Australia</h2>
+            <div class="contact-box grid">
+                <div class="address">
+                    <p class="main-address font-size-100 text-color-dark-grey text-bold">Designo AU Office</p>
+                    <p class="sub-address font-size-100 text-color-dark-grey">19 Balonne Street</p>
+                    <p class="sub-address font-size-100 text-color-dark-grey">New South Wales 2443</p>
+                </div>
+
+                <div class="contact-us-box">
+                    <p class="contact-us-heading font-size-100 text-color-dark-grey text-bold">Contact</p>
+                    <a class="footer-contact-link font-size-100 text-color-dark-grey text-decoration-none"
+                       href="tel:(02) 6720 9092">P : (02) 6720 9092</a>
+                    <a class="footer-contact-link font-size-100 text-color-dark-grey text-decoration-none"
+                       href="contact@designo.au">M : contact@designo.au</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container location-container united-kingdom-location-container grid ">
+        <div class="text-content background-very-light-peach flow flex flex-direction-column flex-justify-content-center">
+            <h2 class="secondary-heading text-color-peach">United Kingdom</h2>
+            <div class="contact-box grid">
+                <div class="address">
+                    <p class="main-address font-size-100 text-color-dark-grey text-bold">Designo UK Office</p>
+                    <p class="sub-address font-size-100 text-color-dark-grey">13  Colorado Way</p>
+                    <p class="sub-address font-size-100 text-color-dark-grey">Rhyd-y-fro SA8 9GA</p>
+                </div>
+
+                <div class="contact-us-box">
+                    <p class="contact-us-heading font-size-100 text-color-dark-grey text-bold">Contact </p>
+                    <a class="footer-contact-link font-size-100 text-color-dark-grey text-decoration-none"
+                       href="tel: 078 3115 1400">P : 078 3115 1400</a>
+                    <a class="footer-contact-link font-size-100 text-color-dark-grey text-decoration-none"
+                       href="contact@designo.uk">M : contact@designo.uk</a>
+                </div>
+            </div>
+        </div>
+        <div class="image-container location-image-container"></div>
+    </div>
 
 </section>
 
