--- a/15 - Designo Multi Page Website/contact.html
+++ b/15 - Designo Multi Page Website/contact.html
@@ -38,6 +38,37 @@
   </div>
 </header>
 
+<section class="hero-section">
+  <div class="container grid grid--2-columns contact-us-container background-peach">
+
+    <div class="text-content flow">
+      <h1 class="primary-heading text-color-white">
+        Contact us
+      </h1>
+      <p class="text font-size-100 text-color-white">
+        Ready to take it to the next level? Let’s talk about your project or idea and find out how we can help your business grow. If you are looking for unique digital experiences that’s relatable to your users, drop us a line.
+      </p>
+    </div>
+
+    <div class="user-input-container">
+      <form action="#" class="flow">
+        <label for="person-name">
+          <input type="text" name="person-name" class="input" id="person-name" placeholder="Name">
+        </label>
+        <label for="email-address">
+          <input type="text" name="email-address" class="input" id="email-address" placeholder="Email Address">
+        </label>
+        <label for="phone-number">
+          <input type="number" name="phone-number" class="input" id="phone-number" placeholder="Phone Number">
+        </label>
+        <button class="submit btn-light uppercase">
+          Submit
+        </button>
+      </form>
+    </div>
+  </div>
+</section>
+
 
 <footer class="footer section-padding background-black">
 
@@ -103,36 +134,5 @@
 </footer>
 <div class="overlay hidden"></div>
 <script src="Javascript/script.js"></script>
-<!--  Contact us-->
-<!--  Ready to take it to the next level? Let’s talk about your project or idea and find out how -->
-<!--  we can help your business grow. If you are looking for unique digital experiences that’s -->
-<!--  relatable to your users, drop us a line.-->
-
-<!--  Name-->
-<!--  Email address-->
-<!--  Phone-->
-<!--  Your message-->
-<!--  Submit-->
-
-<!--  Canada-->
-<!--  See location-->
-
-<!--  Australia-->
-<!--  See location-->
-
-<!--  United Kingdom-->
-<!--  See location-->
-
-<!--  Our company-->
-<!--  Locations-->
-<!--  Contact-->
-
-<!--  Designo Central Office-->
-<!--  3886 Wellington Street-->
-<!--  Toronto, Ontario M9C 3J5-->
-
-<!--  Contact Us (Central Office)-->
-<!--  P : +1 253-863-8967-->
-<!--  M : contact@designo.co-->
 </body>
 </html>
