--- a/15 - Designo Multi Page Website/web-design.html
+++ b/15 - Designo Multi Page Website/web-design.html
@@ -21,9 +21,9 @@
 
         <nav class="main-nav">
             <ul class="main-nav-list flex">
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="about.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
+                <li><a href="locations.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
             </ul>
         </nav>
 
@@ -192,11 +192,11 @@
 
         <nav class="footer-nav">
             <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                <li><a href="about.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
