--- a/15 - Designo Multi Page Website/about.html
+++ b/15 - Designo Multi Page Website/about.html
@@ -90,7 +90,7 @@
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
                     Canada
                 </h3>
-                <a href="#" class="btn-dark see-location-button uppercase text-decoration-none">
+                <a href="locations.html" class="btn-dark see-location-button uppercase text-decoration-none">
                     See Location
                 </a>
             </div>
@@ -104,7 +104,7 @@
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
                     Australia
                 </h3>
-                <a href="#" class="btn-dark see-location-button uppercase text-decoration-none">
+                <a href="locations.html" class="btn-dark see-location-button uppercase text-decoration-none">
                     See Location
                 </a>
             </div>
@@ -118,7 +118,7 @@
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
                     United Kingdom
                 </h3>
-                <a href="#" class="btn-dark see-location-button uppercase text-decoration-none">
+                <a href="locations.html" class="btn-dark see-location-button uppercase text-decoration-none">
                     See Location
                 </a>
             </div>
