--- a/15 - Designo Multi Page Website/app-design.html
+++ b/15 - Designo Multi Page Website/app-design.html
@@ -170,9 +170,9 @@
             </div>
 
             <div class="button-container grid">
-                <button class="btn-light get-in-touch-button uppercase">
+                <a href="contact.html" class="btn-light get-in-touch-button text-decoration-none uppercase">
                     Get in Touch
-                </button>
+                </a>
             </div>
         </div>
     </section>
