--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -49,7 +49,7 @@
                     With over 10 years in the industry, we are experienced in creating fully responsive websites, app
                     design, and engaging brand experiences. Find out more about our services.
                 </p>
-                <a href="#" class="btn-light call-to-action-button text-decoration-none font-size-100 text-color-black background-white uppercase">
+                <a href="about.html" class="btn-light call-to-action-button text-decoration-none font-size-100 text-color-black background-white uppercase">
                     Learn more
                 </a>
             </div>
@@ -94,14 +94,14 @@
     <section class="advantages-section section-padding">
         <div class="container grid grid--3-columns">
             <div class="advantage grid">
-                <div class="intro-image-container">
+                <div class="advantage-image-container">
                     <img src="Images/home/desktop/illustration-passionate.svg" alt="Designo advantage">
                 </div>
-                <div class="intro-text flow">
+                <div class="advantages-text flow">
                     <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
                         Passionate
                     </h3>
-                    <p class="intro-text">
+                    <p class="advantages-text">
                         Each project starts with an in-depth brand research to ensure we only create products that serve
                         a
                         purpose. We merge art, design, and technology into exciting new solutions
@@ -110,14 +110,14 @@
             </div>
 
             <div class="advantage grid">
-                <div class="intro-image-container">
+                <div class="advantage-image-container">
                     <img src="Images/home/desktop/illustration-resourceful.svg" alt="Designo advantage">
                 </div>
-                <div class="intro-text flow">
+                <div class="advantages-text flow">
                     <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
                         Resourceful
                     </h3>
-                    <p class="intro-text">
+                    <p class="advantages-text">
                         Everything that we do has a strategic purpose. We use an agile approach in all of our projects
                         and value customer collaboration. It guarantees superior results that fulfill our clients’
                         needs.
@@ -126,14 +126,14 @@
             </div>
 
             <div class="advantage grid">
-                <div class="intro-image-container">
+                <div class="advantage-image-container">
                     <img src="Images/home/desktop/illustration-friendly.svg" alt="Designo advantage">
                 </div>
-                <div class="intro-text flow">
+                <div class="advantages-text flow">
                     <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
                         Friendly
                     </h3>
-                    <p class="intro-text font-size-100">
+                    <p class="advantages-text font-size-100">
                         We are a group of enthusiastic folks who know how to put people first. Our success depends on
                         our customers, and we strive to give them the best experience a company can provide.
                     </p>
@@ -159,9 +159,9 @@
             </div>
 
             <div class="button-container grid">
-                <button class="btn-light get-in-touch-button uppercase">
+                <a href="contact.html" class="btn-light get-in-touch-button text-decoration-none uppercase">
                     Get in Touch
-                </button>
+                </a>
             </div>
         </div>
     </section>
