--- a/15 - Designo Multi Page Website/graphic-design.html
+++ b/15 - Designo Multi Page Website/graphic-design.html
@@ -138,9 +138,9 @@
       </div>
 
       <div class="button-container grid">
-        <button class="btn-light get-in-touch-button uppercase">
+        <a href="contact.html" class="btn-light get-in-touch-button text-decoration-none uppercase">
           Get in Touch
-        </button>
+        </a>
       </div>
     </div>
   </section>
