--- a/15 - Designo Multi Page Website/locations.html
+++ b/15 - Designo Multi Page Website/locations.html
@@ -131,9 +131,9 @@
             </div>
 
             <div class="button-container grid">
-                <button class="btn-light get-in-touch-button uppercase">
+                <a href="contact.html" class="btn-light get-in-touch-button text-decoration-none uppercase">
                     Get in Touch
-                </button>
+                </a>
             </div>
         </div>
     </section>
@@ -195,52 +195,6 @@
 
 <div class="overlay hidden"></div>
 <script src="Javascript/script.js"></script>
-<!--  Our Company-->
-<!--  Locations-->
-<!--  Contact-->
 
-<!--  Canada-->
-<!--  Designo Central Office-->
-<!--  3886 Wellington Street-->
-<!--  Toronto, Ontario M9C 3J5-->
-
-<!--  Contact-->
-<!--  P : +1 253-863-8967-->
-<!--  M : contact@designo.co-->
-
-<!--  Australia-->
-<!--  Designo AU Office-->
-<!--  19 Balonne Street-->
-<!--  New South Wales 2443-->
-
-<!--  Contact-->
-<!--  P : (02) 6720 9092-->
-<!--  M : contact@designo.au-->
-
-<!--  United Kingdom-->
-<!--  Designo UK Office-->
-<!--  13 Colorado Way-->
-<!--  Rhyd-y-fro SA8 9GA-->
-
-<!--  Contact-->
-<!--  P : 078 3115 1400-->
-<!--  M : contact@designo.uk-->
-
-<!--  Let’s talk about your project-->
-<!--  Ready to take it to the next level? Contact us today and find out how our expertise can -->
-<!--  help your business grow.-->
-<!--  Get in touch-->
-<!--  -->
-<!--  Our company-->
-<!--  Locations-->
-<!--  Contact-->
-<!--  -->
-<!--  Designo Central Office-->
-<!--  3886 Wellington Street-->
-<!--  Toronto, Ontario M9C 3J5-->
-<!--  -->
-<!--  Contact Us (Central Office)-->
-<!--  P : +1 253-863-8967-->
-<!--  M : contact@designo.co-->
 </body>
 </html>
