--- a/15 - Designo Multi Page Website/contact.html
+++ b/15 - Designo Multi Page Website/contact.html
@@ -69,7 +69,7 @@
 
                 <div class="input-container email-container">
                     <label for="email-address">
-                        <input type="text" name="email-address" class="input" id="email-address"
+                        <input type="email" name="email-address" class="input" id="email-address"
                                placeholder="Email Address">
                     </label>
                     <div class="error flex flex-gap">
