--- a/15 - Designo Multi Page Website/about.html
+++ b/15 - Designo Multi Page Website/about.html
@@ -80,7 +80,7 @@
 
 <section class="locations-section section-padding">
 
-    <div class="container grid grid--3-columns">
+    <div class="container location-demo-container grid">
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
