--- a/15 - Designo Multi Page Website/contact.html
+++ b/15 - Designo Multi Page Website/contact.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
 
-                <button class="submit-button btn-light uppercase">
+                <button class="submit-button btn-light uppercase letter-spacing-1">
                     Submit
                 </button>
             </form>
@@ -110,7 +110,7 @@
 
 <section class="locations-section section-padding">
 
-    <div class="container grid grid--3-columns">
+    <div class="container location-demo-container grid">
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
@@ -236,5 +236,6 @@
 </footer>
 <div class="overlay hidden"></div>
 <script src="Javascript/script.js"></script>
+<script src="Javascript/form-validation.js"></script>
 </body>
 </html>
