--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -92,7 +92,7 @@
     </section>
 
     <section class="advantages-section section-padding">
-        <div class="container grid grid--3-columns">
+        <div class="container advantage-container grid grid--3-columns">
             <div class="advantage grid">
                 <div class="advantage-image-container">
                     <img src="Images/home/desktop/illustration-passionate.svg" alt="Designo advantage">
