--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -40,7 +40,7 @@
                 <button class="number-button">2</button>
                 <button class="number-button">3</button>
                 <button class="operator-button">-</button>
-                <button class="operator-button">.</button>
+                <button class="number-button">.</button>
                 <button class="number-button">0</button>
                 <button class="operator-button">/</button>
                 <button class="operator-button">x</button>
