--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -10,7 +10,7 @@
     <title>Frontend Mentor | Calculator app</title>
 
 </head>
-<body>
+<body class="theme-1-active">
 <main>
     <section class="calculator-section">
         <div class="container flow">
@@ -26,17 +26,17 @@
                             <label for="theme-2-radio">2</label>
                             <label for="theme-3-radio">3</label>
                         </div>
-                        <div class="radio-wrapper flex flex-justify-content-space-between">
-                            <label class="theme-radio-button" for="theme-1-radio">
+                        <div class="radio-wrapper flex">
+                            <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-1-radio">
                                 <input type="radio" name="theme-1-radio" class="theme-radios" id="theme-1-radio">
+                                <span class="theme-checkmark current-active"></span>
+                            </label>
+                            <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-2-radio">
+                                <input type="radio" name="theme-2-radio" class="theme-radios" id="theme-2-radio">
                                 <span class="theme-checkmark"></span>
                             </label>
-                            <label class="theme-radio-button" for="theme-2-radio">
-                                <input type="radio" name="theme-1-radio" class="theme-radios" id="theme-2-radio">
-                                <span class="theme-checkmark"></span>
-                            </label>
-                            <label class="theme-radio-button" for="theme-3-radio">
-                                <input type="radio" name="theme-1-radio" class="theme-radios" id="theme-3-radio">
+                            <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-3-radio">
+                                <input type="radio" name="theme-3-radio" class="theme-radios" id="theme-3-radio">
                                 <span class="theme-checkmark"></span>
                             </label>
                         </div>
