--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -19,13 +19,15 @@
                     <h1 class="primary-heading">calc</h1>
                 </div>
                 <div class="theme-toggle-box flex">
-<!--                    <div class="text">Theme</div>-->
+                    <h2 class="secondary-heading font-size-100 uppercase">Theme</h2>
                     <div class="theme-slider">
                         <div class="label-wrapper flex flex-justify-content-space-between">
                             <label for="theme-1-radio">1</label>
                             <label for="theme-2-radio">2</label>
                             <label for="theme-3-radio">3</label>
                         </div>
+
+
                         <div class="radio-wrapper flex">
                             <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-1-radio">
                                 <input type="radio" name="theme-1-radio" class="theme-radios" id="theme-1-radio">
