--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -18,32 +18,31 @@
                 <div class="heading-container">
                     <h1 class="primary-heading">calc</h1>
                 </div>
-                <div class="theme-toggle-box flex">
-                    <h2 class="secondary-heading font-size-100 uppercase">Theme</h2>
-                    <div class="theme-slider">
-                        <div class="label-wrapper flex flex-justify-content-space-between">
+                <div class="theme-toggle-box">
+                        <div class="label-wrapper flex">
                             <label for="theme-1-radio">1</label>
                             <label for="theme-2-radio">2</label>
                             <label for="theme-3-radio">3</label>
                         </div>
 
+                        <div class="input-wrapper flex">
+                            <h2 class="secondary-heading font-size-100 uppercase">Theme</h2>
+                            <div class="radio-wrapper flex">
+                                <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-1-radio">
+                                    <input type="radio" name="theme-1-radio" class="theme-radios" id="theme-1-radio">
+                                    <span class="theme-checkmark current-active"></span>
+                                </label>
+                                <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-2-radio">
+                                    <input type="radio" name="theme-2-radio" class="theme-radios" id="theme-2-radio">
+                                    <span class="theme-checkmark"></span>
+                                </label>
+                                <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-3-radio">
+                                    <input type="radio" name="theme-3-radio" class="theme-radios" id="theme-3-radio">
+                                    <span class="theme-checkmark"></span>
+                                </label>
+                            </div>
 
-                        <div class="radio-wrapper flex">
-                            <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-1-radio">
-                                <input type="radio" name="theme-1-radio" class="theme-radios" id="theme-1-radio">
-                                <span class="theme-checkmark current-active"></span>
-                            </label>
-                            <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-2-radio">
-                                <input type="radio" name="theme-2-radio" class="theme-radios" id="theme-2-radio">
-                                <span class="theme-checkmark"></span>
-                            </label>
-                            <label class="theme-radio-button flex flex-justify-content-center flex-align-items-center" for="theme-3-radio">
-                                <input type="radio" name="theme-3-radio" class="theme-radios" id="theme-3-radio">
-                                <span class="theme-checkmark"></span>
-                            </label>
                         </div>
-
-                    </div>
                 </div>
             </header>
 
