--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -66,7 +66,7 @@
                 <button class="number-button">.</button>
                 <button class="number-button">0</button>
                 <button class="operator-button">/</button>
-                <button class="operator-button">x</button>
+                <button class="operator-button multiplication">&times;</button>
                 <button class="reset-button uppercase">Reset</button>
                 <button class="equals-button">=</button>
             </div>
