--- a/01_qr-code-component/index.html
+++ b/01_qr-code-component/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Component (Frontend Mentor)</title>
-    <link rel="icon" type=" image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" type=" image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
@@ -19,13 +19,13 @@
     </div>
 
     <div class="container">
-        <img src="Images/image-qr-code.png" alt="" class="image">
+        <img src="images/image-qr-code.png" alt="" class="image">
         <div class="text">
             <h3 class="heading">Improve your front-end skills by building projects</h3>
             <p class="para">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 
 </html>
