--- a/02_product-preview-component/index.html
+++ b/02_product-preview-component/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Product preview card component</title>
-  </style>
+
 </head>
 <body>
 
@@ -15,8 +15,8 @@
     <div class="container">
       <div class="grid">
         <div class="img">
-          <img src="Images/image-product-desktop.jpg" class="desktop-image" alt="">
-          <img src="Images/image-product-mobile.jpg" class="mobile-image" alt="">
+          <img src="images/image-product-desktop.jpg" class="desktop-image" alt="">
+          <img src="images/image-product-mobile.jpg" class="mobile-image" alt="">
         </div>
         <div class="card-content">
           <h6 class="product-category">Perfume</h6>
@@ -28,7 +28,7 @@
             <p class="current-price">$149.99</p>
             <p class="old-price">$169.99</p>
            </div>
-           <button class="call-to-action"><img src="Images/icon-cart.svg" alt="">Add to Cart</button>
+           <button class="call-to-action"><img src="images/icon-cart.svg" alt="">Add to Cart</button>
         </div>
       </div>
     </div>
