--- a/03_testimonial-grid-section/index.html
+++ b/03_testimonial-grid-section/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/queries.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/queries.css">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
@@ -29,7 +29,7 @@
       <article class="testimonial Daniel-Clifford">
         <div class="person-information">
           <div class="person-image">
-            <img src="Images/image-daniel.jpg" alt="Daniel Clifford">
+            <img src="images/image-daniel.jpg" alt="Daniel Clifford">
           </div>
           <div>
             <p class="name">Daniel Clifford</p>
@@ -52,7 +52,7 @@
       <article class="testimonial Jonathan-Walters">
         <div class="person-information">
           <div class="person-image">
-            <img src="Images/image-jonathan.jpg" alt="Jonathan Walters">
+            <img src="images/image-jonathan.jpg" alt="Jonathan Walters">
           </div>
           <div>
             <p class="name">Jonathan Walters</p>
@@ -71,7 +71,7 @@
       <article class="testimonial Jeanette-Harmon">
         <div class="person-information">
           <div class="person-image">
-            <img src="Images/image-jeanette.jpg" alt="Jeanette Harmon">
+            <img src="images/image-jeanette.jpg" alt="Jeanette Harmon">
           </div>
           <div>
             <p class="name">Jeanette Harmon</p>
@@ -90,7 +90,7 @@
       <article class="testimonial Patrick-Abrams">
         <div class="person-information">
           <div class="person-image">
-            <img src="Images/image-patrick.jpg" alt="Patrick Abrams">
+            <img src="images/image-patrick.jpg" alt="Patrick Abrams">
           </div>
           <div>
             <p class="name">Patrick Abrams</p>
@@ -112,7 +112,7 @@
       <article class="testimonial Kira-Whittle">
         <div class="person-information">
           <div class="person-image">
-            <img src="Images/image-kira.jpg" alt="Kira Whittle">
+            <img src="images/image-kira.jpg" alt="Kira Whittle">
           </div>
           <div>
             <p class="name">Kira Whittle</p>
@@ -137,7 +137,7 @@
     </section>
   </main>
 
-  <script src="Javascript/script.js"></script>
+  <script src="javascript/script.js"></script>
 </body>
 
 </html>
