--- a/04_nft-preview-card-component/index.html
+++ b/04_nft-preview-card-component/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 
@@ -14,9 +14,9 @@
   <main>
     <section class="NFT-Preview-Card">
       <div class="image-container">
-        <img src="Images/image-equilibrium.jpg" alt="Equilibrium image">
+        <img src="images/image-equilibrium.jpg" alt="Equilibrium image">
         <div class="image-overlay">
-          <img src="Images/icon-view.svg" alt="icon">
+          <img src="images/icon-view.svg" alt="icon">
         </div>
       </div>
       <div class="text-content">
@@ -25,12 +25,12 @@
           Our Equilibrium collection promotes balance and calm.
         </p>
         <div class="crypto-information">
-          <p class="ethereum"><img src="Images/icon-ethereum.svg" alt=""> 0.041 ETH</p>
-          <p class="days-left"><img src="Images/icon-clock.svg" alt=""> 3 days left</p>
+          <p class="ethereum"><img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</p>
+          <p class="days-left"><img src="images/icon-clock.svg" alt=""> 3 days left</p>
         </div>
         <div class="author-information">
           <div class="author-image">
-            <img src="Images/image-avatar.png" alt="">
+            <img src="images/image-avatar.png" alt="">
           </div>
           <p class="created-by">Creation of <span class="author-name">Jules Wyvern</span></p>
         </div>
