--- a/05_easy-bank-landing-page/index.html
+++ b/05_easy-bank-landing-page/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/queries.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/queries.css">
 
   <title>Frontend Mentor | Easybank landing page</title>
 
@@ -19,7 +19,7 @@
 <body>
   <header class="header">
     <div class="header-container">
-      <img src="Images/logo.svg" alt="logo" class="logo">
+      <img src="images/logo.svg" alt="logo" class="logo">
 
       <nav class="main-nav">
         <ul class="main-nav-list">
@@ -31,8 +31,8 @@
         </ul>
       </nav>
       <button class="dropdown-toggle">
-        <img src="Images/icon-hamburger.svg" class="open-nav" alt="Open menu">
-        <img src="Images/icon-close.svg" class="close-nav" alt="Close menu">
+        <img src="images/icon-hamburger.svg" class="open-nav" alt="Open menu">
+        <img src="images/icon-close.svg" class="close-nav" alt="Close menu">
       </button>
       <a class="main-cta header-cta" href="#">Request Invite</a>
     </div>
@@ -55,7 +55,7 @@
         </div> 
 
         <div class="hero-image">
-          <img src="Images/image-mockups.png" alt="Phone Image">
+          <img src="images/image-mockups.png" alt="Phone Image">
         </div>
       </div>
     </section>
@@ -78,7 +78,7 @@
 
           <div class="feature">
             <div class="feature-icon">
-              <img src="Images/icon-online.svg" alt="feature icon">
+              <img src="images/icon-online.svg" alt="feature icon">
             </div>
             <h3 class="heading-tertiary">
               Online Banking
@@ -91,7 +91,7 @@
 
           <div class="feature">
             <div class="feature-icon">
-              <img src="Images/icon-budgeting.svg" alt="feature icon">
+              <img src="images/icon-budgeting.svg" alt="feature icon">
             </div>
             <h3 class="heading-tertiary">
               Simple Budgeting
@@ -104,7 +104,7 @@
 
           <div class="feature">
             <div class="feature-icon">
-              <img src="Images/icon-onboarding.svg" alt="feature icon">
+              <img src="images/icon-onboarding.svg" alt="feature icon">
             </div>
             <h3 class="heading-tertiary">
               Fast Onboarding
@@ -117,7 +117,7 @@
 
           <div class="feature">
             <div class="feature-icon">
-              <img src="Images/icon-api.svg" alt="feature icon">
+              <img src="images/icon-api.svg" alt="feature icon">
             </div>
             <h3 class="heading-tertiary">
               Open API
@@ -139,7 +139,7 @@
         <div class="article-grid grid grid--4-cols">
           <article class="article">
             <div class="article-image">
-              <img src="Images/image-currency (1).jpg" alt="Currency image">
+              <img src="images/image-currency (1).jpg" alt="Currency image">
             </div>
             <div class="article-content">
               <span class="author">
@@ -157,7 +157,7 @@
 
           <article class="article">
             <div class="article-image">
-              <img src="Images/image-restaurant.jpg" alt="Confetti image">
+              <img src="images/image-restaurant.jpg" alt="Confetti image">
             </div>
             <div class="article-content">
               <span class="author">
@@ -175,7 +175,7 @@
 
           <article class="article">
             <div class="article-image">
-              <img src="Images/image-plane.jpg" alt="Plane image">
+              <img src="images/image-plane.jpg" alt="Plane image">
             </div>
             <div class="article-content">
               <span class="author">
@@ -193,7 +193,7 @@
 
           <article class="article">
             <div class="article-image">
-              <img src="Images/image-confetti.jpg" alt="Confetti image">
+              <img src="images/image-confetti.jpg" alt="Confetti image">
             </div>
             <div class="article-content">
               <span class="author">
@@ -217,7 +217,7 @@
     <div class="footer-container container grid grid--4-cols">
       <div class="logos">
         <a href="#" class="logo">
-          <img src="Images/footer-logo.svg" alt="Easybank logo">
+          <img src="images/footer-logo.svg" alt="Easybank logo">
         </a>
         <div class="social-logos">
           <a href="#"><ion-icon name="logo-facebook" class="social-logo" alt="Youtube logo"></ion-icon></a>
@@ -248,7 +248,7 @@
     </div>
   </footer>
 
-  <script src="Javascript/script.js"></script>
+  <script src="javascript/script.js"></script>
 
 </body>
 
