--- a/06_3-column-preview-card-component/index.html
+++ b/06_3-column-preview-card-component/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/queries.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/queries.css">
 
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
@@ -20,7 +20,7 @@
 
         <div class="column">
           <figure class="icon-container">
-            <img src="Images/icon-sedans.svg" alt="Sedan Icon" class="icon">
+            <img src="images/icon-sedans.svg" alt="Sedan Icon" class="icon">
           </figure>
           <div class="text-content">
             <h2 class="secondary-heading">
@@ -37,7 +37,7 @@
 
         <div class="column">
           <figure class="icon-container">
-            <img src="Images/icon-suvs.svg" alt="Suv Icon" class="icon">
+            <img src="images/icon-suvs.svg" alt="Suv Icon" class="icon">
           </figure>
           <div class="text-content">
             <h2 class="secondary-heading">
@@ -54,7 +54,7 @@
 
         <div class="column">
           <figure class="icon-container">
-            <img src="Images/icon-luxury.svg" alt="Luxury Icon" class="icon">
+            <img src="images/icon-luxury.svg" alt="Luxury Icon" class="icon">
           </figure>
           <div class="text-content">
             <h2 class="secondary-heading">
