--- a/07_interactive-rating-component/index.html
+++ b/07_interactive-rating-component/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/queries.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/queries.css">
 
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
@@ -16,7 +16,7 @@
     <section class="rating-component">
       <div class="container start-state">
         <figure class="logo-container">
-          <img src="Images/icon-star.svg" alt="Star logo">
+          <img src="images/icon-star.svg" alt="Star logo">
         </figure>
         <div class="text-content">
           <h1 class="primary-heading">How did we do?</h1>
@@ -40,13 +40,13 @@
 
       <div class="container end-state">
         <figure class="image-container">
-          <img src="Images/illustration-thank-you.svg" alt="Thank you Illustration">
+          <img src="images/illustration-thank-you.svg" alt="Thank you Illustration">
         </figure>
          <div class="user-choice">
           <p>You have selected <span class="input">4</span> out of 5</p>
          </div>
          <div class="text-content">
-          <h2 class="secondary-heading">Thank you!</h1>
+          <h2 class="secondary-heading">Thank you!</h2>
           <p class="text">
             We appreciate you taking the time to give a rating. If you ever need more support, 
             don’t hesitate to get in touch!
@@ -61,7 +61,7 @@
 
     </section>
   </main>
- <script src="Javascript/script.js"></script>
+ <script src="javascript/script.js"></script>
 </body>
 
 </html>
