--- a/08-notifications-page/index.html
+++ b/08-notifications-page/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/dark-mode-style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/dark-mode-style.css">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <title>Frontend Mentor | Notifications page</title>
@@ -29,7 +29,7 @@
 
           <div class="notification unread-background">
             <figure class="profile-container">
-              <img src="Images/avatar-mark-webber.webp" alt="Mark Webber profile picture">
+              <img src="images/avatar-mark-webber.webp" alt="Mark Webber profile picture">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -46,7 +46,7 @@
 
           <div class="notification unread-background">
             <figure class="profile-container">
-              <img src="Images/avatar-angela-gray.webp" alt="Angela Gray profile pictrure">
+              <img src="images/avatar-angela-gray.webp" alt="Angela Gray profile pictrure">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -63,7 +63,7 @@
 
           <div class="notification unread-background">
             <figure class="profile-container">
-              <img src="Images/avatar-jacob-thompson.webp" alt="Jacob Thompson profile picture">
+              <img src="images/avatar-jacob-thompson.webp" alt="Jacob Thompson profile picture">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -80,7 +80,7 @@
 
           <div class="notification">
             <figure class="profile-container temp">
-              <img src="Images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin profile picture">
+              <img src="images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin profile picture">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -99,7 +99,7 @@
 
           <div class="notification">
             <figure class="profile-container">
-              <img src="Images/avatar-kimberly-smith.webp" alt="Kimberly Smith profile picture">
+              <img src="images/avatar-kimberly-smith.webp" alt="Kimberly Smith profile picture">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -111,14 +111,14 @@
               </p>
             </div>
             <figure class="user-photo-container">
-              <img src="Images/image-chess.webp" alt="A girl playin g chess">
+              <img src="images/image-chess.webp" alt="A girl playin g chess">
             </figure>
           </div>
 
 
           <div class="notification">
             <figure class="profile-container">
-              <img src="Images/avatar-nathan-peterson.webp" alt="Nathan Peterson profile picture">
+              <img src="images/avatar-nathan-peterson.webp" alt="Nathan Peterson profile picture">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -134,7 +134,7 @@
 
           <div class="notification">
             <figure class="profile-container">
-              <img src="Images/avatar-anna-kim.webp" alt="Anna Kim profile picture">
+              <img src="images/avatar-anna-kim.webp" alt="Anna Kim profile picture">
             </figure>
             <div class="text-content">
               <p class="message-text">
@@ -158,7 +158,7 @@
     </section>
   </main>
 
-  <script src="Javascript/script.js"></script>
+  <script src="javascript/script.js"></script>
 </body>
 
 </html>
